--- a/src/app/components/add-acreedor/add-acreedor.component.html
+++ b/src/app/components/add-acreedor/add-acreedor.component.html
@@ -1,3 +1,21 @@
-<p>
-  add-acreedor works!
-</p>
+<form>
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="nombre">   Nombre</label>
+      <input type="text" class="form-control" id="nombre" placeholder="Nombre">
+    </div>
+    <div class="form-group col-md-6">
+      <label for="pass">   Contraseña</label>
+      <input type="password" class="form-control" id="passs" placeholder="Contraseña">
+    </div>
+  </div>
+
+  <div class="form-row">
+    <div class="form-group col-md-6">
+      <label for="iban">IBAN</label>
+      <input type="text" class="form-control" id="iban" placeholder="IBAN">
+    </div>
+  </div>
+
+  <button type="submit" class="btn btn-success">Añadir Acreedor</button>
+</form>
