--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -14,6 +14,9 @@
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['acreedores']" routerLinkActive="active">Acreedores</a>
             </li>
+             <li class="nav-item">
+                <a class="nav-link" [routerLink]="['orden']" routerLinkActive="active">Nueva Orden</a>
+            </li>
         </ul>
         <span class="navbar-text">
       <button (click)="login()"
