--- a/src/app/components/add-acreedor/add-acreedor.component.html
+++ b/src/app/components/add-acreedor/add-acreedor.component.html
@@ -5,8 +5,8 @@
       <input type="text" class="form-control" id="nombre" placeholder="Nombre">
     </div>
     <div class="form-group col-md-6">
-      <label for="pass">   Contraseña</label>
-      <input type="password" class="form-control" id="passs" placeholder="Contraseña">
+      <label for="nif">   NIF</label>
+      <input type="text" class="form-control" id="nif" placeholder="NIF">
     </div>
   </div>
 
