Base de datos funcional y proyecto compilado para funcionar en xamp ruta localhost/geckop/dist/authapp

--- a/src/app/components/add-orden/add-orden.component.css
+++ b/src/app/components/add-orden/add-orden.component.css
@@ -1,14 +1,15 @@
 .form-control:focus{
-border-color: #228B22;
-border-width: 2px;
-box-shadow: none;
+  border-color: #228B22;
+  border-width: 2px;
+  box-shadow: none;
 }
 
 
 .custom-select:focus{
-border-color: #228B22;
-border-width: 2px;
-box-shadow: none;
+  border-color: #228B22;
+  border-width: 2px;
+  box-shadow: none;
+  outline: none;
 }
 
 .custom-select option{
@@ -16,6 +17,6 @@ box-shadow: none;
 
 }
 
-.custom-select option:hover{
-    box-shadow: 0 0 10px 100px #228B22 inset !important;
+select:hover{
+  outline: none;
 }
