--- a/src/app/components/tabla-acreedores/tabla-acreedores.component.html
+++ b/src/app/components/tabla-acreedores/tabla-acreedores.component.html
@@ -9,7 +9,7 @@
   </thead>
   <tbody>
     <tr>
-      <th scope="row">Mercedes</th>
+      <th scope="row">Pepito</th>
       <td>123456789A</td>
       <td>ES11112222333344445555</td>
       <td>Botón</td>
