formularios registro y login añadidos junto con enlace en la barra

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,5 +3,7 @@
 <div class="container main-container">
 
     <router-outlet></router-outlet>
+    <!--<app-login></app-login>-->
+    <!--<app-form-registro-usuarios></app-form-registro-usuarios>-->
 
 </div>
