--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -1,3 +1,29 @@
-<p>
-  perfil works!
-</p>
+<form [formGroup]="perfilUser" (ngSubmit)="modificar()">
+    <div class="cont-perfil">
+
+        <div class="bloque-izq">
+            <label for="">Nombre</label>
+            <input id="placeColor" type="text" placeholder="Nombre" formControlName="nombre">
+
+            <label for="">IBAN</label>
+            <input id="placeColor" type="text" placeholder="pedirlo cuando se registe 1 proyecto" formControlName="iban">
+        </div>
+
+        <div class="bloque-der">
+            <label for="">NIF</label>
+            <input id="placeColor" type="text" placeholder="valor registrado" formControlName="apellidos">
+
+            <label for="">Correo</label>
+            <input id="placeColor" type="email" placeholder="Correo registrado bd" formControlName="correo">
+        </div>
+
+
+
+
+        <button type="submit">
+            Modificar
+        </button>
+
+    </div>
+    <!--{{forma.valid}}-->
+</form>
