--- a/src/app/components/perfil/perfil.component.html
+++ b/src/app/components/perfil/perfil.component.html
@@ -3,15 +3,19 @@
 
         <div class="bloque-izq">
             <label for="">Nombre</label>
-            <input id="placeColor" type="text" placeholder="Nombre" formControlName="nombre">
+            <input id="placeColor" type="text" placeholder="Nombre" formControlName="nombre"><br>
 
             <label for="">IBAN</label>
             <input id="placeColor" type="text" placeholder="pedirlo cuando se registe 1 proyecto" formControlName="iban">
+            <br>
+            <button type="submit">
+                Modificar
+            </button>
         </div>
 
         <div class="bloque-der">
             <label for="">NIF</label>
-            <input id="placeColor" type="text" placeholder="valor registrado" formControlName="apellidos">
+            <input id="placeColor" type="text" placeholder="valor registrado" formControlName="nif"><br>
 
             <label for="">Correo</label>
             <input id="placeColor" type="email" placeholder="Correo registrado bd" formControlName="correo">
@@ -20,9 +24,7 @@
 
 
 
-        <button type="submit">
-            Modificar
-        </button>
+
 
     </div>
     <!--{{forma.valid}}-->
