--- a/src/app/components/add-orden/add-orden.component.html
+++ b/src/app/components/add-orden/add-orden.component.html
@@ -1,11 +1,12 @@
+<h1><b>Nueva Orden</b></h1>
 <form>
 <!-- Entradas simples -->
     <div class="form-group">
         <label for="desc">   Descripción</label>
         <input type="text" class="form-control" id="desc" placeholder="Descripción">
     </div>
-    
-    <div class="form-row"> 
+
+    <div class="form-row">
         <div class="col">
             <label for="importe">   Importe</label>
             <input type="text" class="form-control" id="importe" placeholder="Importe">
@@ -13,11 +14,11 @@
         <div class="col">
             <label for="iva">   IVA</label>
             <input type="text" class="form-control" id="iva" placeholder="IVA">
-        </div>  
+        </div>
     </div>
 
-    
-    
+
+
 <!--Lista desplegable-->
     <div class="form-group">
         <label for="desc">   Descripción</label>
@@ -29,18 +30,18 @@
         </select>
     </div>
 
-<!-- Area de texto (Comentarios)-->    
+<!-- Area de texto (Comentarios)-->
   <div class="form-group">
     <label for="comentarios">Comentarios</label>
     <textarea class="form-control" id="comentarios" rows="3" placeholder="Comentarios..."></textarea>
   </div>
 
-    
+
   <div class="form-group">
-    <label for="imagen">    Imagenes</label>
+    <label for="imagen">    Imágenes</label>
     <input type="file" class="form-control-file" id="imagen">
   </div>
-  
-    
+
+
   <button type="submit" class="btn btn-success">Crear Orden</button>
 </form>
