--- a/src/app/components/form-registro-usuarios/form-registro-usuarios.component.html
+++ b/src/app/components/form-registro-usuarios/form-registro-usuarios.component.html
@@ -3,7 +3,7 @@
 <form [formGroup]="forma" (ngSubmit)="guardarCambios()">
     <div class="cont-registro">
         <div class="registro-izq">
-            <img src="../../../assets/marca.jpg" alt="logo geckop">
+            <img src="assets/marca.jpg" alt="logo geckop">
         </div>
 
         <div class="registro-der">
