--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -10,18 +10,18 @@
 
 <body>
     <div class="cont-login">
-        <img src="../../../assets/geckop.png" class="imagenUsuario" alt="imagen del logo">
+        <img src="assets/geckop.png" class="imagenUsuario" alt="imagen del logo">
         <h1>LOGIN</h1>
         <form action="">
             <!--Email-->
             <div class="cont-email">
-                <img src="../../../assets/iconos/user.png" alt="icono usuario">
+                <img src="assets/iconos/user.png" alt="icono usuario">
                 <input type="text" placeholder="Email">
             </div>
 
             <!--Password-->
             <div class="cont-password">
-                <img src="../../../assets/iconos/lock.png" alt="icono usuario">
+                <img src="assets/iconos/lock.png" alt="icono usuario">
                 <input type="password" placeholder="Password">
             </div>
             <input type="submit" value="Log in">
