--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -8,16 +8,23 @@
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['home']" routerLinkActive="active">Home</a>
             </li>
+            
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['perfil']" routerLinkActive="active">Perfil</a>
             </li>
+            
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['acreedores']" routerLinkActive="active">Acreedores</a>
             </li>
+            
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['orden']" routerLinkActive="active">Nueva Orden</a>
             </li>
-
+            
+            <li class="nav-item">
+                <a class="nav-link" [routerLink]="['proyectos']" routerLinkActive="active">Proyectos</a>
+            </li>
+            
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['login']" routerLinkActive="active">Login</a>
             </li>
