--- a/src/app/components/tabla-ordenes/tabla-ordenes.component.html
+++ b/src/app/components/tabla-ordenes/tabla-ordenes.component.html
@@ -1,19 +1,19 @@
-<form>
-	 <div class="seaarch form-row">
-		  <div class="col">
-				<input type="text" class="form-control form-control-sm" id="numeracion" placeholder="Numeración">
-		  </div>
 
-		  <div class="col">
-            <select class="form-control form-control-sm results">
-              <option selected>Seleccione Estado</option>
-              <option value="aprobada">Aprobada</option>
-              <option value="cancelada">Cancelada</option>
-              <option value="espera">Espera</option>
-            </select>
-		  </div>
-	 </div>
-</form>
+<!--<div class="form-row">
+    <div class="col">
+        <input type="text" class="search form-control form-control-sm" id="numeracion" placeholder="Numeración">
+    </div>
+
+    <div class="col">
+        <select class="form-control form-control-sm results">
+          <option selected>Seleccione Estado</option>
+          <option value="aprobada">Aprobada</option>
+          <option value="cancelada">Cancelada</option>
+          <option value="espera">Espera</option>
+        </select>
+    </div>
+</div>
+
 <p></p>
 <table class="table">
   <thead class="thead-dark">
@@ -26,6 +26,45 @@
   </thead>
   <tbody>
     <tr>
+      <th scope="row">1</th>
+      <td>Aprobada</td>
+      <td>id1a</td>
+      <td>Botón</td>
+    </tr>
+    <tr>
+      <th scope="row">2</th>
+      <td>Cancelada</td>
+      <td>id2c</td>
+      <td>Botón</td>
+    </tr>
+    <tr>
+      <th scope="row">3</th>
+      <td>Espera</td>
+      <td>id3e</td>
+      <td>Botón</td>
+    </tr>
+  </tbody>
+</table>-->
+
+
+<div class="form-group pull-right">
+    <input type="text" class="search form-control form-control-sm" id="numeracion" placeholder="Numeración">
+</div>
+<span class="counter pull-right"></span>
+<table class="table table-hover table-bordered results">
+  <thead>
+    <tr>
+      <th scope="col">ID</th>
+      <th scope="col">Estado</th>
+      <th scope="col">Numeración</th>
+      <th scope="col">Button</th>
+    </tr>
+    <tr class="warning no-result">
+      <td colspan="4"><i class="fa fa-warning"></i> No result</td>
+    </tr>
+  </thead>
+  <tbody>
+     <tr>
       <th scope="row">1</th>
       <td>Aprobada</td>
       <td>id1a</td>
