--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Geckop</a>
+    <a class="navbar-brand">Geckop</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
   <span class="navbar-toggler-icon"></span>
   </button>
@@ -8,23 +8,23 @@
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['home']" routerLinkActive="active">Home</a>
             </li>
-            
+
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['perfil']" routerLinkActive="active">Perfil</a>
             </li>
-            
+
             <li class="nav-item">
-                <a class="nav-link" [routerLink]="['acreedores']" routerLinkActive="active">Acreedores</a>
+                <a class="nav-link" [routerLink]="['/acreedores']" routerLinkActive="active">Acreedores</a>
             </li>
-            
+
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['orden']" routerLinkActive="active">Nueva Orden</a>
             </li>
-            
+
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['proyectos']" routerLinkActive="active">Proyectos</a>
             </li>
-            
+
             <li class="nav-item">
                 <a class="nav-link" [routerLink]="['login']" routerLinkActive="active">Login</a>
             </li>
@@ -46,7 +46,7 @@
 
         <button (click)="salir()"
         type="submit"
-        class="btn btn-outline-primary btn-sm">Salir</button> 
+        class="btn btn-outline-primary btn-sm">Salir</button>
         </span>-->
     </div>
 </nav>
