--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,7 +16,7 @@
             <!--Email-->
             <div class="cont-email">
                 <img src="assets/iconos/user.png" alt="icono usuario">
-                <input type="text" placeholder="Email">
+                <input type="text" placeholder="DNI">
             </div>
 
             <!--Password-->
