--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-navbar></app-navbar>
 
-<div class="container main-container">
+<div class="container my-3 wrap">
 
     <router-outlet></router-outlet>
     <!--<app-login></app-login>-->
