--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,38 +1,36 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand">Geckop</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-  <span class="navbar-toggler-icon"></span>
-  </button>
-    <div class="collapse navbar-collapse" id="navbarText">
+    <a class="navbar-brand" href="#">{{title}}</a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['home']" routerLinkActive="active">Home</a>
-            </li>
+          <!--<li class="nav-item">
+            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          </li>-->
+          <li class="nav-item"  routerLinkActive="active">
+            <a class="nav-link" routerLink="/perfil">Perfil</a>
+          </li>
 
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['perfil']" routerLinkActive="active">Perfil</a>
-            </li>
+          <li class="nav-item"  routerLinkActive="active">
+            <a class="nav-link" routerLink="/acreedores">Acreedores</a>
+          </li>
 
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['/acreedores']" routerLinkActive="active">Acreedores</a>
-            </li>
+          <li class="nav-item"  routerLinkActive="active">
+            <a class="nav-link" routerLink="/orden">Nueva Orden</a>
+          </li>
 
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['orden']" routerLinkActive="active">Nueva Orden</a>
-            </li>
+          <li class="nav-item"  routerLinkActive="active">
+            <a class="nav-link" routerLink="/proyectos">Proyectos</a>
+          </li>
 
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['proyectos']" routerLinkActive="active">Proyectos</a>
-            </li>
+          <li class="nav-item"  routerLinkActive="active">
+            <a class="nav-link" routerLink="/login">Login</a>
+          </li>
 
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['login']" routerLinkActive="active">Login</a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" [routerLink]="['registro']" routerLinkActive="active">Registro</a>
-            </li>
-
+          <li class="nav-item"  routerLinkActive="active">
+            <a class="nav-link" routerLink="/registro">Registro</a>
+          </li>
         </ul>
         <!--
         <span class="navbar-text">
