footer al final de la página arreglado

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
+html {
+  position: relative;
+  min-height: 100%;
+}
+
+body {
+  margin-bottom: 60px; /* footer: height: 60px; */
+}
 
 .main-container {
     margin-top: 40px;
+}
+
+.contenedor-main {
+  
+  padding-bottom: 60px;
 }
