vista ordenes cambiada

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
           </li>
 
           <li class="nav-item"  routerLinkActive="active">
-            <a class="nav-link" routerLink="/orden">Nueva Orden</a>
+            <a class="nav-link" routerLink="/ordenes">Órdenes</a>
           </li>
 
           <li class="nav-item"  routerLinkActive="active">
