--- a/src/app/components/proyectos/form-proyectos.component.html
+++ b/src/app/components/proyectos/form-proyectos.component.html
@@ -9,35 +9,48 @@
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="fechaInicio">   Fecha de Inicio</label>
-        <input type="text" class="form-control" [(ngModel)]="proyecto.fechaInicio" id="fechaInicio" placeholder="fecha de inicio" name="fechaInicio">
+        <input type="date" class="form-control" [(ngModel)]="proyecto.fechaInicio" id="fechaInicio" placeholder="fecha de inicio" name="fechaInicio">
       </div>
       <div class="form-group col-md-6">
-        <label for="nif">   Fecha de Cierre</label>
-        <input type="text" class="form-control" [(ngModel)]="proyecto.fechaCierre" id="fechaCierre" placeholder="fecha de cierre" name="fechaCierre">
+        <label for="fechaCierre">   Fecha de Cierre</label>
+        <input type="date" class="form-control" [(ngModel)]="proyecto.fechaCierre" id="fechaCierre" placeholder="fecha de cierre" name="fechaCierre">
       </div>
     </div>
 
     <div class="form-row">
       <div class="form-group col-md-6">
-        <label for="iban">Nombre</label>
+        <label for="nombre">Nombre</label>
         <input type="text" class="form-control" [(ngModel)]="proyecto.nombre" id="nombre" placeholder="nombre del proyecto" name="nombre">
       </div>
       <div class="form-group col-md-6">
-        <label for="nif">   Acrónimo</label>
+        <label for="acronimo">   Acrónimo</label>
         <input type="text" class="form-control" [(ngModel)]="proyecto.acronimo" id="acronimo" placeholder="acrónimo" name="acronimo">
       </div>
     </div>
 
     <div class="form-row">
       <div class="form-group col-md-6">
-        <label for="iban">Presupuesto</label>
+        <label for="presupuesto">Presupuesto</label>
         <input type="text" class="form-control" [(ngModel)]="proyecto.presupuesto" id="presupuesto" placeholder="presupuesto del proyecto" name="presupuesto">
       </div>
       <div class="form-group col-md-6">
-        <label for="nif">   Nº de contabilidad</label>
+        <label for="nContabilidad">   Nº de contabilidad</label>
         <input type="text" class="form-control" [(ngModel)]="proyecto.nContabilidad" id="nContabilidad" placeholder="Número de contabilidad" name="nContabilidad">
       </div>
     </div>
+
+    <div class="form-row">
+      <div class="form-group col-md-6">
+        <label for="ip1">IP</label>
+        <input type="text" class="form-control" [(ngModel)]="proyecto.ip1" id="ip1" placeholder="Nombre IP" name="ip1">
+      </div>
+      <div class="form-group col-md-4">
+        <label for="ip2">   IP 2</label>
+        <input type="text" class="form-control" [(ngModel)]="proyecto.ip2" id="ip2" placeholder="Nombre de ip2" name="ip2">
+      </div>
+      <button class="btn btn-success ml-auto mr-auto mt-4 w-20 h-25" role="button" (click)="crearAcreedor()">Añadir IP</button>
+    </div>
+
 
     <div class="card bg-dark">
       <div class="card-header text-white">
@@ -50,7 +63,7 @@
         <div class="form-group col-md-6 mt-2 ml-3">
 
           <button class="btn btn-success" types="button" [routerLink] = "['tabla-usuarios/tabla-usuarios.component']">Añadir investigadores</button>
-          <button class="btn btn-success ml-5" role="button" (click)="crearAcreedor()">Añadir IP</button>
+
         </div>
       </div>
 
