Registro funcionando, lo de los terminos todavía falta por implementar

--- a/src/app/components/form-registro-usuarios/form-registro-usuarios.component.html
+++ b/src/app/components/form-registro-usuarios/form-registro-usuarios.component.html
@@ -45,7 +45,7 @@
                 <label><input type="checkbox" value="checkTerminos"> Al registrarse, aceptas nuestras <a href="#">Condiciones de uso</a> y <a href="#">Política de privacidad.</a></label>
             </div>
 
-            <input type="submit" value="Registrarse">
+            <button class="btn btn-dark btnRegistro" role="button" (click)="registro()">Registrarse</button>
 
             <div id="iniciarSesion">
                 <label>¿Ya tienes una cuenta? <a href="#">Iniciar sesión</a></label>
