--- a/src/app/components/tabla-usuarios/tabla-usuarios.component.html
+++ b/src/app/components/tabla-usuarios/tabla-usuarios.component.html
@@ -1,24 +1,55 @@
 <!--<h1><b>Investigadores</b></h1>-->
-<div class="card-body text-secondary">
 
-    <table class="table table-bordered table-striped text-center">
-      <thead class="thead-dark">
-        <tr>
-          <th>Tipo</th>
-          <th>Nombre</th>
-          <th>Apellido</th>
-          <th>Email</th>
-        </tr>
-      </thead>
+<div class="row">
 
-      <tbody>
-        <tr *ngFor="let usuario of usuarios">
-          <!--Tabla que mira si el usuario es ip o no-->
-          <td>TIPO</td>
-          <td>{{ usuario.nombre }}</td>
-          <td>{{ usuario.apellido1 }}</td>
-          <td>{{ usuario.email }}</td>
-        </tr>
-      </tbody>
-    </table>
+  <!--TABLA IZQUIERDA-->
+    <div class="col-sm">
+      <table class="table table-bordered table-striped text-center">
+        <thead class="thead-dark">
+          <tr>
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th>Email</th>
+            <th>Añadir</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr *ngFor="let usuario of usuarios">
+            <td>{{ usuario.nombre }}</td>
+            <td>{{ usuario.apellido1 }}</td>
+            <td>{{ usuario.email }}</td>
+            <td><button type="button" class="btn btn-link" name="button"  (click)="anadirInvestigador()">
+                  <img src="assets/iconos/mas.png" class="rounded" alt="Añadir Investigador">
+                </button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+
+    <!--TABLA DERECHA-->
+
+    <div class="col-sm">
+      <table class="table table-bordered table-striped text-center">
+        <thead class="thead-dark">
+          <tr>
+            <th>Tipo</th>
+            <th>Nombre</th>
+            <th>Apellido</th>
+            <th>Email</th>
+          </tr>
+        </thead>
+
+        <tbody>
+          <tr *ngFor="let usuario of usuarios_anadidos">
+            <!--Tabla que mira si el usuario es ip o no-->
+            <td>TIPO</td>
+            <td>{{ usuario.nombre }}</td>
+            <td>{{ usuario.apellido1 }}</td>
+            <td>{{ usuario.email }}</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
 </div>
