proyectos y tabla usuarios separados

--- a/src/app/components/proyectos/form-proyectos.component.html
+++ b/src/app/components/proyectos/form-proyectos.component.html
@@ -62,8 +62,8 @@
       <div class="form-row">
         <div class="form-group col-md-6 mt-2 ml-3">
 
-          <button class="btn btn-success" types="button" [routerLink] = "['tabla-usuarios/tabla-usuarios.component']">Añadir investigadores</button>
-
+        <!--  <button class="btn btn-success" types="button" [routerLink] = "['tabla-usuarios/tabla-usuarios.component']">Añadir investigadores</button> -->
+          <button class="btn btn-success" types="button" (click)="anadirInvestigadores()">Añadir investigadores</button>
         </div>
       </div>
 
