--- a/src/app/components/tabla-usuarios/tabla-usuarios.component.html
+++ b/src/app/components/tabla-usuarios/tabla-usuarios.component.html
@@ -19,7 +19,7 @@
             <td>{{ usuario.nombre }}</td>
             <td>{{ usuario.apellido1 }}</td>
             <td>{{ usuario.email }}</td>
-            <td><button type="button" class="btn btn-link" name="button"  (click)="anadirInvestigador()">
+            <td><button type="button" class="btn btn-link" name="button"  (click)="anadirInvestigador(usuario)">
                   <img src="assets/iconos/mas.png" class="rounded" alt="Añadir Investigador">
                 </button>
             </td>
