--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav mr-auto" *ngIf="isLog">
           <!--<li class="nav-item">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>-->
@@ -35,23 +35,26 @@
 
 
 <!--Bloques botón-->
-        <span class="navbar-text">
-            <button (click)="salir()" *ngIf="isLog; else notLogged"
-              type="submit"
-              class="btn btn-outline-success btn-sm">Salir
-            </button>
+<div class="loginreg">
+  <span class="navbar-text">
+      <button (click)="salir()" *ngIf="isLog; else notLogged"
+        type="submit"
+        class="btn btn-outline-success btn-sm">Salir
+      </button>
 
-          <ng-template #notLogged>
-            <button (click)="login()"
-              type="button"
-              class="btn btn-outline-success btn-sm">Login
-            </button>
-            <button (click)="registrar()"
-              type="submit"
-              class="btn btn-outline-success btn-sm">Registro
-            </button>
-          </ng-template>
-        </span>
+    <ng-template #notLogged>
+      <button (click)="login()"
+        type="button"
+        class="btn btn-outline-success btn-sm" routerLink="/login">Login
+      </button>
+      <button (click)="registrar()"
+        type="submit"
+        class="btn btn-outline-success btn-sm" routerLink="/registro">Registro
+      </button>
+    </ng-template>
+  </span>
+
+</div>
 
     </div>
 
